Bug 322661 - Task editor dialogue: Type does not include the option 'Milestone'. Also System date format should be followed i.e. option of dd/mm/yy
Summary: Task editor dialogue: Type does not include the option 'Milestone'. Also Syst...
Status: RESOLVED FIXED
Alias: None
Product: calligraplan
Classification: Applications
Component: usability (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Other
: NOR normal
Target Milestone: ---
Assignee: Dag Andersen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-07-21 19:29 UTC by MikeD
Modified: 2016-09-13 08:16 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description MikeD 2013-07-21 19:29:46 UTC
see summary.
The in line editor does include milestone, but the dialogue editor does not.
System dater format should be followed for those of us that need to use dd/mm/yy format
Also noticed that late finish dates are generally BEFORE early finish dates

Otherwise so far: Nice package.


Reproducible: Always
Comment 1 Dag Andersen 2016-09-01 09:14:43 UTC
(In reply to MikeD from comment #0)
> see summary.
> The in line editor does include milestone, but the dialogue editor does not.
Good catch, change will come.
> System dater format should be followed for those of us that need to use
> dd/mm/yy format
Does here.
> Also noticed that late finish dates are generally BEFORE early finish dates
Hmmm, more info needed.
> 
> Otherwise so far: Nice package.
Thanks
> 
> 
> Reproducible: Always
Comment 2 Dag Andersen 2016-09-13 08:16:32 UTC
Git commit 0c4e5dabee7252d95c79be7ec9c7d37861f28b57 by Dag Andersen.
Committed on 13/09/2016 at 06:23.
Pushed by danders into branch 'master'.

Plan: Usability: Never block save, add Milestone option to task dialog
Related: bug 352226
FIXED_IN:3.0

M  +1    -1    plan/libs/ui/kptmainprojectpanel.cpp
M  +1    -1    plan/libs/ui/kptsummarytaskgeneralpanel.cpp
M  +18   -11   plan/libs/ui/kpttaskgeneralpanel.cpp
M  +79   -73   plan/libs/ui/kpttaskgeneralpanelbase.ui

http://commits.kde.org/calligra/0c4e5dabee7252d95c79be7ec9c7d37861f28b57