Plan: Usability: Never block save, add Milestone option to task dialog

BUG:322661
BUG:352226
FIXED_IN:3.0